# airflow-aerospike-provider

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: pull-request.yml  python-publish.yml
aerospike_provider/: __init__.py
aerospike_provider/hooks/: aerospike.py
aerospike_provider/operators/: aerospike.py
aerospike_provider/sensors/: aerospike.py
tests/hooks/: test_aerospike.py
tests/operators/: test_aerospike.py
tests/sensors/: test_aerospike.py
