[metadata]
name = airflow_provider_aerospike
url = https://github.com/eldar-eln-bigabid/airflow-aerospike-provider

[options]
packages = find:
install_requires =
    apache-airflow>=2.2.0
    aerospike==14.0.0
python_requires = >=3.8

[options.entry_points]
apache_airflow_provider =
    provider_info=aerospike_provider.__init__:get_provider_info
