[metadata]
name = airflow_provider_aerospike
url = https://github.com/eldar-eln-bigabid/airflow-aerospike-provider
license = Apache-2.0
license_file = LICENSE


[options]
packages = find:
install_requires =
    apache-airflow>=2.2.0
    aerospike==14.0.0
python_requires = >=3.8


[options.entry_points]
apache_airflow_provider =
    provider_info=aerospike_provider.__init__:get_provider_info


[options.extras_require]
dev =
    pre-commit==2.15.0
    mypy==1.8.0

#TODO: fix mypy issues
# [mypy]
# files = aerospike_provider/